完善了微信扫码绑定和登陆

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -147,14 +147,10 @@
                         <li>
                             <a href="#" id="operation_log">操作日志</a>
                         </li>
+                        <li>
+                            <a href="#" id="bind_wechat_btn">绑定微信</a>
+                        </li>
                     </ul>
-                </li>
-                <li class="landing_link">
-                    <a id="bind_wechat_btn"><i class="fa fa-star"></i> <span class="nav-label">绑定微信</span>
-                        <span class="label label-warning pull-right">NEW</span></a>
-                </li>
-                <li class="special_link">
-                    <a href="package.html"><i class="fa fa-database"></i> <span class="nav-label">Package</span></a>
                 </li>
             </ul>
         </div>
