--- a/src/main/resources/templates/mobileBindingNote.html
+++ b/src/main/resources/templates/mobileBindingNote.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>微信授权登陆</title>
+    <title>绑定提示</title>
 
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/font-awesome/css/font-awesome.css}" rel="stylesheet">
@@ -22,21 +22,18 @@
 
 
     <div class="middle-box text-center animated fadeInDown">
-        <h2>微信登陆</h2>
-        <h3 class="font-bold">微信授权登陆</h3>
+        <h2>success</h2>
+        <h3 class="font-bold">账号绑定</h3>
 
         <div class="error-desc">
-            将使用微信授权本系统并登陆，确定请点击登陆按钮。 <br/><a id="wechat_auth_login_btn" href="#" class="btn btn-primary m-t">登陆</a>
+            申请微信账号与本系统账号绑定，请查看PC端浏览器，并按提示完成！<br/><a id="mobile_login_note_confirm_btn" href="#" class="btn btn-primary m-t">确定</a>
         </div>
-
     </div>
 
     <!-- Mainly scripts -->
     <script th:src="@{/js/jquery-3.1.1.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
-    <script th:src="@{/js/common/common.js}"></script>
-    <script th:src="@{/js/custom/wechatauthlogin.js}"></script>
-
+    <script th:src="@{/js/custom/mobileLoginNote.js}"></script>
 </body>
 
 </html>
