--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -140,6 +140,9 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#" id="project_status_a"><i class="fa fa-desktop"></i> <span class="nav-label">水库项目状态</span>  <span class="pull-right label label-primary">SPECIAL</span></a>
+                </li>
+                <li>
                     <a href="#"><i class="fa fa-magic"></i> <span
                             class="nav-label">系统设置 </span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
